[package]
name = "hyper-json"
description = "Retrieving mock JSON data"
version = "0.1.0"
edition = "2021"
authors = ["Alex Black <wa7@sa34.cx>"]
license = "MIT"
repository = "https://github.com/wa7sa34cx/hyper-json"
keywords = ["tokio", "hyper", "json"]
readme = "README.md"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "hyper_json"

[dependencies]
anyhow = "1.0"
dotenv = "0.15"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.4"
# http = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# futures = "0.3"